objects/ISR_Contact__c.object
<CustomObject>
    <description>Used in ISR Project.</description>
    <fields>
        <fullName>Best_Time_To_Call__c</fullName>
        <inlineHelpText>When is the best time to contact this person?</inlineHelpText>
        <label>Best Time To Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Services_POC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Best person for Client Services to contact regarding kit supplies.</inlineHelpText>
        <label>Client Services POC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Draws_the_Blood__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Draws the Blood</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Educates_Patients_on_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Educates Patients on Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Email for this user</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fills_out_the_TRF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fills out the TRF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c + &quot; &quot;+Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gatekeeper__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this person someone who controls whether you can speak directly to the target MD?</inlineHelpText>
        <label>Gatekeeper?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identifies_Patients_for_Genomic_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies Patients for Genomic Testing and/or Prepares Charts</inlineHelpText>
        <label>Identifies Patients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MD_Preference__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to same contact ID as Master-detail. Purpose: for two related lists on LEX page &apos;ISR Contact Lex Page&apos;. Updated by PB process &apos;ISR Contact: Update Lookup&apos;</description>
        <label>MD Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.ISR_Target__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MD Preferences</relationshipLabel>
        <relationshipName>ISR_Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>May_Answer_Patient_Billing_Questions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>May Answer Patient Billing Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Call History for this person</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Role__c</fullName>
        <inlineHelpText>What is their role in the office?</inlineHelpText>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office Admin</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Physicians Assistant</fullName>
                </value>
                <value>
                    <fullName>Medical Assistant</fullName>
                </value>
                <value>
                    <fullName>Genomics Navigator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <inlineHelpText>Direct line to this user</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <inlineHelpText>Main contact related to this person.</inlineHelpText>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Office Contacts</relationshipLabel>
        <relationshipName>ISR_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sends_the_Kits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sends the Kits</label>
        <type>Checkbox</type>
    </fields>
    <label>ISR Contact</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISR Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>